<resources>
    <string name="app_name">BYourEyes</string>
    <string name="et_username">请输入用户名</string>
    <string name="et_password">请输入密码</string>
    <string name="et_confPassword">请确认密码</string>
    <string name="et_newPassword">请输入新密码</string>
    <string name="et_destination">请输入目的地</string>
    <string name="startNavi">开始导航</string>
    <string name="et_age">请输入您的年龄</string>
    <string name="et_phone">请输入您的联系方式</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_ads">TO BE YOUR EYES</string>
    <string name="modifyPassword">修改密码</string>
    <string name="rememberPassword">记住密码</string>
    <string name="search">查找</string>

    <string name="tv_message_menu">菜单界面。上滑帮助，下滑修改信息，右滑返回，长按切换是否需要帮助。</string>
    <string name="menu_message1">菜单界面</string>
    <string name="menu_message2">上滑帮助</string>
    <string name="menu_message3">下滑修改信息</string>
    <string name="menu_message4">右滑返回</string>
    <string name="menu_message5">长按切换是否需要帮助</string>
    <string name="gender_choice">请选择性别</string>
    <string name="modify">修改</string>
</resources>
